# PFNet

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: EEHEEEEHEE_rd4_0871.hxms  ecDHFR_APO.hxms  ecDHFR_MTX.hxms  ecDHFR_TMP.hxms
pfnet/: bayesian.py  cli.py  data.py  hxio.py  model.py  plot.py  run_inference.py  train.py  utilts.py
