[project]
authors = [{name = "Chenlin Lu", email = "lucltsinghua@gmail.com"}]
dependencies = []
description = "A machine learning method for calculating highly localized protein stabilities"
name = "pfnet"
version = "0.1.0"

[project.scripts]
pfnet = "pfnet.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["nvidia", "conda-forge", "bioconda"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

# Default dependencies (CPU version, cross-platform)
[tool.pixi.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "*"
seaborn = "*"
numba = "*"
hdxrate = ">=0.2.2,<0.3"
lightning = ">=2.4.0,<3"
wandb = ">=0.18.7,<0.19"
ipykernel = ">=6.29.5,<7"
pip = ">=24.3.1,<25"
pyro-ppl = ">=1.9.1,<2"
pyopenms = ">=3.2.0,<4"
biopython = ">=1.84,<2"
tabulate = ">=0.9.0,<0.10"
py3dmol = ">=2.5.1,<3"
pytorch = "2.4.*"  # CPU version

[tool.pixi.feature.cuda.system-requirements]
cuda = "12"

[tool.pixi.feature.cuda.dependencies]
pytorch-gpu = "2.4.1*"
cuda-version = "12.6.*"

[tool.pixi.feature.cuda]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pfnet = { path = ".", editable = true }
pigeon_feather = { git = "https://github.com/glasgowlab/PIGEON-FEATHER.git" }

# Define environments
[tool.pixi.environments]
default = { solve-group = "default" }
cuda = { features = ["cuda"], solve-group = "cuda" } 

[tool.pixi.tasks]
pfnet = "python -m pfnet.cli"
